--- a/MobileRecruitTest/app/build.gradle
+++ b/MobileRecruitTest/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
     debugImplementation 'androidx.fragment:fragment-testing:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
 }
